--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -415,6 +415,14 @@ header h2 {
 	position: relative;
 	width: 940px;
 	margin: 0 auto;
+	
+}
+
+.img1 {
+	position: aboslute;
+	width: 150px;
+	length: 220px;
+	padding-left: 12px;
 }
 
 #content-wrapper {
@@ -423,8 +431,8 @@ header h2 {
 }
 
 #main-content {
-	float: left;
-	width: 690px;
+	float: right;
+	width: 650px;
 }
 
 #main-content img {
@@ -432,11 +440,11 @@ header h2 {
 }
 
 aside#sidebar {
-	float: right;
-	width: 200px;
+	float: left;
+	width: 220px;
 	min-height: 504px;
-	padding-left: 20px;
-	font-size: 12px;
+	padding-left: 12px;
+	font-size: 18px;
 	line-height: 1.3;
 	background: transparent url(../images/sidebar-bg.jpg) 0 0 no-repeat;
 }
@@ -452,8 +460,8 @@ aside#sidebar p.repo-owner, aside#sidebar p.repo-owner a {
 a.button {
 	width: 134px;
 	height: 58px;
-	padding-top: 22px;
-	padding-left: 68px;
+	padding-top: 2px;
+	padding-left: 8px;
 	font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial,
 		serif;
 	font-size: 23px;
@@ -470,7 +478,7 @@ header a.button {
 	position: absolute;
 	top: 0;
 	right: 0;
-	background: transparent url(../images/github-button.png) 0 0 no-repeat;
+	background: transparent url(../images/github-button0.png) 0 0 no-repeat;
 }
 
 aside a.button {
